    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>controller_manager</run_depend>
    <run_depend>effort_controllers</run_depend>
    <run_depend>d1_publisher</run_depend>
    <run_depend>d2_publisher</run_depend>
    <run_depend>d3_publisher</run_depend>
    <run_depend>d4_publisher</run_depend>
    <run_depend>a_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>xacro</run_depend>

